html file renamed

--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
 <body>
     <section class="header">
         <nav>
-            <a id="logo" href="landingPage.html"><img
+            <a id="logo" href="index.html"><img
                     src="https://static.wixstatic.com/media/7b9073_cb108253ae7545b29803f49636fa01d6~mv2.png/v1/fill/w_100,h_100,al_c,q_85,usm_0.66_1.00_0.01/Untitled.webp"></a>
             <div class="navLinks" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="./landingPage.html">HOME</a></li>
+                    <li><a href="./index.html">HOME</a></li>
                     <li><a href="#1">COURSE</a></li>
-                    <li><a href="./admission.html" target="_blank">ADMISSION</a></li>
+                    <li><a href="#" target="_blank">ADMISSION</a></li>
                     <!-- <li><a href="#">STORE</a></li> -->
                     <li><a href="#foot">CONTACT US </a></li>
                     <li><a href="#js" onclick="music()" title="music on/off" class="bumButton" id="musicX"><audio
                                 controls hidden loop="loop" id="myTune">
-                                <source src="../KSM NEW/violin.mp3" type="audio/ogg">
-                                <source src="../KSM NEW/violin.mp3" type="audio/mpeg">
+                                <source src="../KSM/violin.mp3" type="audio/ogg">
+                                <source src="../KSM/violin.mp3" type="audio/mpeg">
                             </audio>MUSIC</a></li>
                 </ul>
             </div>
