--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <title>Krishna's School of Music</title>
     <link rel="stylesheet" type="text/css" href="./css/landing.css">
-    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
-    <meta name="viewport" content="user-scalable=0;"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
