--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="left box">
                 <h2 style="color:whitesmoke;">About us</h2>
                 <div class="content">
-                    <p><b style="color:rgb(212, 255, 18);">Krishna's school of Music</b> is an online educational establishment. We contribute great
+                    <p style="font-size:18px;"><b style="color:rgb(212, 255, 18);">Krishna's school of Music</b> is an online educational establishment. We contribute great
                         roles in the field of Fine arts education, providing the best online classes for Carnatic music,
                         Veena, Violin, Mridangam and Tabla. We have a great team of the best South Indian artists and
                         renowned resource persons.</p>
@@ -155,11 +155,11 @@
                         </div>
                         <div class="pno">
                             <div class="text">Phone Number</div>
-                            <input type="tel" pattern="[0-9]{10}" name="contact_number" placeholder="+91-xxxxxxxxxx" required>
+                            <input type="tel" pattern="[0-9]{10}" name="contact_number" required>
                         </div>
                         <div class="msg">
                             <div class="text">Message</div>
-                            <textarea rows="2" cols="25" name="message" required></textarea>
+                            <textarea style="padding:6px;" rows="2" cols="25" name="message"  placeholder="Your message" required></textarea>
                         </div>
                         <div class="btn">
                             <button type="submit"><b>Send</b></button>
