--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 <ul>
                     <li><a href="./index.html">HOME</a></li>
                     <li><a href="#1">COURSE</a></li>
-                    <li><a href="#" target="_blank">ADMISSION</a></li>
+                    <li><a href="#">ADMISSION</a></li>
                     <!-- <li><a href="#">STORE</a></li> -->
                     <li><a href="#foot">CONTACT US </a></li>
-                    <li><a href="#js" onclick="music()" title="music on/off" class="bumButton" id="musicX"><audio
-                                controls hidden loop="loop" id="myTune">
+                    <li><a href="#js" onclick="music()" title="music on/off" class="bumButton" id="musicX">
+                            <audio controls hidden loop="loop" id="myTune">
                                 <source src="../KSM/js/violin.mp3" type="audio/ogg">
                                 <source src="../KSM/js/violin.mp3" type="audio/mpeg">
                             </audio>MUSIC</a></li>
