--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <!-- <li><a href="#">STORE</a></li> -->
                     <li><a href="#foot">CONTACT US </a></li>
                     <li><a href="#js" onclick="music()" title="music on/off" class="bumButton" id="musicX">
-                            <audio controls hidden loop="loop" id="myTune">
+                            <audio preload="auto" controls hidden loop="loop" id="myTune">
                                 <source src="../KSM/js/violin.js" type="audio/ogg">
                                 <source src="../KSM/js/violin.js" type="audio/mpeg">
                             </audio>MUSIC</a></li>
