--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                     <li><a href="#foot">CONTACT US </a></li>
                     <li><a href="#js" onclick="music()" title="music on/off" class="bumButton" id="musicX">
                             <audio preload="auto" controls hidden loop="loop" id="myTune">
-                                <source src="../KSM/js/violin.js" type="audio/ogg">
-                                <source src="../KSM/js/violin.js" type="audio/mpeg">
+                                <!-- <source src="../KSM/js/violin.js" type="audio/ogg">
+                                <source src="../KSM/js/violin.js" type="audio/mpeg"> -->
+                                <source src="../KSM/js/violin.mp3" type="audio/mpeg">
                             </audio>MUSIC</a></li>
                 </ul>
             </div>
