--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/ca09b34e8d.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
@@ -51,8 +52,8 @@
                     <li><a href="#foot">CONTACT US </a></li>
                     <li><a href="#js" onclick="music()" title="music on/off" class="bumButton" id="musicX">
                             <audio preload="auto" controls hidden loop="loop" id="myTune">
-                                <source src="../KSM/js/violin.mp3" type="audio/ogg">
-                                <source src="../KSM/js/violin.mp3" type="audio/mpeg">
+                                <source src="../KSM/violin.mp3" type="audio/ogg">
+                                <source src="../KSM/violin.mp3" type="audio/mpeg">
                             </audio>MUSIC</a></li>
                 </ul>
             </div>
@@ -69,7 +70,7 @@
         <h1>Courses We Offer</h1>
         <p>Carnatic vocal and instruments</p>
 
-        <div class="row">
+        <div class="row1">
             <div class="course-column" id="a">
                 <a href="" class="apply-btn">VOCAL</a>
             </div>
@@ -161,7 +162,7 @@
                             <div class="text">Message</div>
                             <textarea style="padding:6px;" rows="2" cols="25" name="message"  placeholder="Your message" required></textarea>
                         </div>
-                        <div class="btn">
+                        <div class="btnX">
                             <button type="submit"><b>Send</b></button>
                         </div>
                     </form>
@@ -181,7 +182,8 @@
 
     <script id="js">
         function music() {
-            var myAudio = document.getElementById("myTune");
+            // var myAudio = document.getElementById("myTune");
+            var myAudio= new Audio("violin.mp3");
             if (myAudio.paused) {
                 myAudio.play();
             } else {
