--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <ul>
                     <li><a href="./index.html">HOME</a></li>
                     <li><a href="#1">COURSE</a></li>
-                    <li><a href="./admissionP.html">ADMISSION</a></li>
+                    <li><a href="./admissionP.html" target="_blank">ADMISSION</a></li>
                     <li><a href="#">STORE</a></li>
                     <li><a href="#foot">CONTACT US </a></li>
                 </ul>
