--- a/admissionP.html
+++ b/admissionP.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
+    <title>Admission Form</title>
     <link rel="stylesheet" type="text/css" href="./css/styleAd.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
