--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
 
         <div class="row1">
             <div class="course-column" id="a">
-                <a href="" class="apply-btn">VOCAL</a>
+                <a href="./admissionP.html" target="_blank" class="apply-btn">VOCAL</a>
             </div>
             <div class="course-column" id="b">
-                <a href="" class="apply-btn">VEENA</a>
+                <a href="./admissionP.html" target="_blank" class="apply-btn">VEENA</a>
             </div>
             <div class="course-column" id="c">
-                <a href="" class="apply-btn">VIOLIN</a>
+                <a href="./admissionP.html" target="_blank" class="apply-btn">VIOLIN</a>
             </div>
         </div>
         <div class="row2">
             <div class="course-column" id="d">
-                <a href="" class="apply-btn">KATHAKALI SANGEETHAM</a>
+                <a href="./admissionP.html" target="_blank" class="apply-btn">KATHAKALI SANGEETHAM</a>
             </div>
             <div class="course-column" id="e">
-                <a href="" class="apply-btn">MRIDANGAM</a>
+                <a href="./admissionP.html" target="_blank" class="apply-btn">MRIDANGAM</a>
             </div>
             <div class="course-column" id="f">
-                <a href="" class="apply-btn">TABLA</a>
+                <a href="./admissionP.html" target="_blank" class="apply-btn">TABLA</a>
             </div>
         </div>
     </section>
