--- a/admissionP.html
+++ b/admissionP.html
@@ -17,7 +17,7 @@
               event.preventDefault();
          
               // these IDs from the previous steps
-              emailjs.sendForm('service_4jkoawq', 'admission_form', this)
+              emailjs.sendForm('service_4jkoawq', 'adm_123', this)
                   .then(function () {
                       console.log('SUCCESS!');
                       event.target.reset();
