--- a/admissionP.html
+++ b/admissionP.html
@@ -91,8 +91,12 @@
             </label>
           </div>
         </div>
-        <div class="button">
+        <!-- <div class="button">
           <input type="submit" value="Submit">
+        </div> -->
+        <!-- <button class="button"><input type="submit" value="submit"></button> -->
+        <div class="btn">
+          <button type="submit" value="submit">Submit</button>
         </div>
       </form>
     </div>
