--- a/admissionP.html
+++ b/admissionP.html
@@ -32,7 +32,7 @@
   <div class="container">
     <div class="title">Admission Form</div>
     <div class="content">
-      <form action="#" id="admission-form">
+      <form id="admission-form">
         <div class="user-details">
           <div class="input-box">
             <span class="details">Full Name</span>
@@ -96,7 +96,7 @@
         </div> -->
         <!-- <button class="button"><input type="submit" value="submit"></button> -->
         <div class="btn">
-          <button type="submit" value="submit">Submit</button>
+          <button type="submit">Submit</button>
         </div>
       </form>
     </div>
