--- a/admissionP.html
+++ b/admissionP.html
@@ -11,6 +11,9 @@
           emailjs.init('PYFMhuzEGPHUhdOTe');//public key
       })();
     </script> -->
+    <script>
+      emailjs.sendForm(service_4jkoawq, adm_123, admission, PYFMhuzEGPHUhdOTe);
+    </script>
     <script type="text/javascript">
         window.onload = function () {
             document.getElementById('admission-form').addEventListener('submit', function (event) {
