--- a/admissionP.html
+++ b/admissionP.html
@@ -11,8 +11,14 @@
           emailjs.init('PYFMhuzEGPHUhdOTe');//public key
       })();
     </script> -->
-    <script>
+    <!-- <script>
       emailjs.sendForm(service_4jkoawq, adm_123, admission, PYFMhuzEGPHUhdOTe);
+    </script> -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript">
+    (function() {
+    emailjs.init('PYFMhuzEGPHUhdOTe');
+    })();
     </script>
     <script type="text/javascript">
         window.onload = function () {
