coursse and gender

--- a/admissionP.html
+++ b/admissionP.html
@@ -52,11 +52,11 @@
             <!-- <input type="text" placeholder="Enter your username" required> -->
             <select name="subject">
               <option value="Vocal">Vocal</option>
-              <option value="Vocal">Veena</option>
-              <option value="Vocal">Violin</option>
-              <option value="Vocal">Kathakali sangeetham</option>
-              <option value="Vocal">Mridangam</option>
-              <option value="Vocal">Tabla</option>
+              <option value="Veena">Veena</option>
+              <option value="Violin">Violin</option>
+              <option value="Kathakali sangeetham">Kathakali sangeetham</option>
+              <option value="Mridangam">Mridangam</option>
+              <option value="Tabla">Tabla</option>
             </select>
           </div>
           <div class="input-box">
@@ -81,9 +81,9 @@
           </div> -->
         </div>
         <div class="gender-details">
-          <input type="radio" name="gender" id="dot-1">
-          <input type="radio" name="gender" id="dot-2">
-          <input type="radio" name="gender" id="dot-3">
+          <input type="radio" value="Male" name="gender" id="dot-1">
+          <input type="radio" value="Female" name="gender" id="dot-2">
+          <input type="radio" value="Prefer not to say" name="gender" id="dot-3">
           <span class="gender-title">Gender</span>
           <div class="category">
             <label for="dot-1">
